# PSP.Homebrew

./: README
apps/PSCgame/: Makefile  README.TXT  editor.c  game.c  joy.c  render.c  thehead.h
apps/SDL3D/: MXCUBE.PLG  Makefile  Readme.txt  compile_mode.h  iohack.h  main.cpp  marker.plg  mfstream.h  mmap.h  mstring.h  mvector.h  mx3d.cpp  mx3d_math.h  mx_tok.h  mxpixelbuffer.h
apps/atariVM/: Makefile  ats-eboot.c  default.ats  icode.c  icode.h  lex.c  lex.h  main.c  masc.h  parse.c  parse.h  program.h  readme.txt  stack.c  stack.h  symtab.c  symtab.h  t.mxf
apps/codematrix/: Makefile  Readme.txt  font.mxf  matrix.c
apps/crossgta/: readme.txt
apps/directorybrowse/: Makefile  browse.c
apps/fractal/: Makefile  fractal.cpp  joystick.h
apps/gualphaflame/: Makefile  README  main.cpp
apps/knightstour/: Makefile  knightstour.c
apps/masterpiece_thesame/: Makefile  psp_sane.c
apps/masterpiecegl/: Makefile  main.cpp  platform.h  pspmake
apps/masterpiecepsp/: Makefile  joystick.h  main.cpp  mx.h  theheader.h
apps/masterpiecex2/: Makefile  Makefile.xbox  NOTES.txt  mpgame.c  mpx2.c  mpx2.h  mxfont.c  mxfont.h  pixelbuffer.c  readme.txt  start.c
apps/mib/: Makefile  NOTE.txt  main.cpp  readme.txt
apps/mxpsp_skeleton/: Makefile  main.cpp
apps/puzzlebox/: Makefile  main.cpp  puzzle.h
apps/roadkill/: Makefile.psp  froggy.c  froggy.h  roadkill.c
apps/smx-src/: Makefile  Makefile.xbox  game.c  level.c  (+4 more)
libs/mxpsp/code/: Makefile.am  Makefile.in  mx.h  mxclamp.cpp  mxclamp.h  mxcontroller.cpp  mxcontroller.h  mxsurface.cpp  mxsurface.h  mxwnd.cpp  mxwnd.h
(+142 files in other folders)
